@@ -21,7 +21,7 @@
 
     <groupId>ai.metaheuristic</groupId>
     <artifactId>srv</artifactId>
-    <version>6.1.1-SNAPSHOT</version>
+    <version>6.1.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>ai.metaheuristic.srv</name>
@@ -30,7 +30,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.0</version>
+        <version>3.2.1</version>
         <relativePath/>
     </parent>
 
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>ai.metaheuristic</groupId>
             <artifactId>mh-commons</artifactId>
-            <version>6.1.1-SNAPSHOT</version>
+            <version>6.1.2-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -331,6 +331,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
+                    <compilerArgument>--enable-preview</compilerArgument>
                     <compilerArgument>-parameters</compilerArgument>
                     <release>21</release>
                     <encoding>${project.build.sourceEncoding}</encoding>
